--- a/port.css
+++ b/port.css
@@ -7,22 +7,7 @@
 html,body{
     width: 100%;
     height: 100%;
-}
-.subPage button a{
-    text-decoration:"none"; 
-    background-color:"white"; 
-    color:"black"; 
-}
-.subPage a{
-    text-decoration:"none"; 
-    font-size: 20px;
-    color:white;
-}
-.subPage{
-    margin: 10px;
-    padding-bottom: 10px;
-    row-gap: 20px;
-}
+    }   
 body{
     background-image: url("background.jpg");
     height: 100%;
@@ -108,7 +93,7 @@ body{
     color: rgba(231, 231, 231, 0.5);
     font-size: 50px;
 }
-button{
+.box2 button{
     background: black;
     color: white;
     width: 100px;
@@ -117,12 +102,12 @@ button{
     display: block;
     margin: 0 auto;
 }
-button a{
+.box2 button a{
     text-decoration: none;
     color: white;
 }
-button:hover{
-    background: white;
+.box2 button:hover{
+    background: rgb(255, 0, 0);
     color: black;
     font-weight: bold;
     box-shadow: rgba(224, 218, 218, 0.678) 0px 5px 15px;
@@ -211,14 +196,6 @@ button:hover{
     color: rgb(255, 0, 0);
     transition: all 0.5s ease;
 }
-.port h4, p{
-    color: rgb(173, 234, 255);
-    font-size: 25px;
-    padding: 20px;
-    margin: 25px;
-    text-align: justify;
-    cursor: pointer;
-}
 .pro a{
     text-decoration: none;
     color: cyan;
@@ -233,4 +210,5 @@ button:hover{
     height: 20px;
     font-size: 30px;
     color: white;
+    cursor: pointer;
 }
